# coursework6

./: .env.sample  pyproject.toml
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
fixtures/: blog.json  client.json  mailing.json  message.json  users.json
mailing/: views.py
mailing/migrations/: 0001_initial.py  0002_initial.py
users/migrations/: 0001_initial.py
